tests/ui/pattern/usefulness/match-slice-patterns.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/match-slice-patterns.rs:2:11
   |
LL |     match list {
   |           ^^^^ pattern `&[_, Some(_), .., None, _]` not covered
   |
   = note: the matched value is of type `&[Option<()>]`
help: ensure that all possible cases are being handled by adding an arm to handle the `&[_, Some(_), .., None, _]` case
   |
LL ~         &[.., Some(_), _] => {}
LL +         &[_, Some(_), .., None, _] => { todo!() }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
